--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,7 +7,7 @@
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
   </view>
-  <view class="enter" catchtap='enter'>
-    <text>开始学习</text>
+  <view class="usermotto">
+    <text class="user-motto">{{motto}}</text>
   </view>
 </view>
