--- a/pages/more/more.wxss
+++ b/pages/more/more.wxss
@@ -1,10 +1,9 @@
 /* pages/more/more.wxss */
-page{
-  background-color:rgb(245, 252, 251)
-}
 .EAImg{
   width:100%;
-  height:500rpx;
+  height:350rpx;
+  padding-top:10%;
+
   }
 
 .section{
@@ -29,7 +28,7 @@ page{
 .passbt{
   width: 720rpx;
   height: 100rpx;
-  background-color: rgba(51, 155, 253, 0.897);
+  background-color:#1aa7db;
   border-radius: 18rpx;
   font-size: 25rpx;
   margin-top:3%;
