--- a/pages/Setup/Setup.wxml
+++ b/pages/Setup/Setup.wxml
@@ -1,16 +1,16 @@
 <!--pages/Setup/Setup.wxml-->
 <view class="head-bg"></view>
 <view class="member">
-    <view class="info-box">
-        <view class="info">
-            <view class="url">
-                <open-data type="userAvatarUrl"></open-data>
-            </view>
-            <view class="name">
-                <open-data type="userNickName"></open-data>
-            </view>
-        </view>
+  <view class="info-box">
+    <view class="info">
+      <view class="url">
+        <open-data type="userAvatarUrl"></open-data>
+      </view>
+      <view class="name">
+        <open-data type="userNickName"></open-data>
+      </view>
     </view>
+  </view>
 </view>
 <!--pages/Calendar/Calendar.wxml-->
 <!-- 打卡日历页面 -->
@@ -46,11 +46,15 @@
             <view class='cell' wx:else>
               <!-- 当前日期已签到 -->
               <view wx:if="{{days[j+k].isSign == true}}" style='background-color:#83C75D' class='cell'>
-                <text>{{days[j+k].date}}</text>
+                <button class='cell' bindtap="btn" id="{{days[j+k].date}}" >
+                  <text>{{days[j+k].date}}</text>
+                </button>
               </view>
               <!-- 当前日期未签到 -->
               <view wx:else>
-                <text>{{days[j+k].date}}</text>
+                <button  class='cell' bindtap="btn" id="{{days[j+k].date}}">
+                  <text>{{days[j+k].date}}</text>
+                </button>
               </view>
             </view>
           </view>
@@ -62,9 +66,9 @@
   <view class='count'>
     <text>截至目前，你已坚持打卡</text>
     <view class='daynumber'>
-    <text class='number'>{{count}}</text>
-    <text class='day'>天</text>
-    </view>    
+      <text class='number'>{{count}}</text>
+      <text class='day'>天</text>
+    </view>
     <text>请再接再厉，继续努力</text>
   </view>
 </view>
