--- a/pages/Setup/Setup.wxss
+++ b/pages/Setup/Setup.wxss
@@ -1,23 +1,26 @@
 /* pages/Setup/Setup.wxss */
+
 .head-bg {
-    width: 100%;
-    background:#1aa7db ;
-    height: 250rpx;
-    position: absolute;
-    z-index: -2;
-    top: 0px;
-    left: 0px;
+  width: 100%;
+  background: #1aa7db;
+  height: 250rpx;
+  position: absolute;
+  z-index: -2;
+  top: 0px;
+  left: 0px;
 }
+
 .arrow {
   width: 21rpx;
   height: 35rpx;
-  margin-left:200px;
+  margin-left: 200px;
 }
+
 .info-box {
-  margin: 40rpx 66rpx; 
+  margin: 40rpx 66rpx;
   height: 200rpx;
-  display:flex;
-  flex-direction:row;
+  display: flex;
+  flex-direction: row;
 }
 
 .info {
@@ -41,11 +44,11 @@
   margin-left: 32rpx;
 }
 
-.all{
+.all {
   margin-top: 20rpx;
 }
 
-.all .bar{
+.all .bar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -53,12 +56,12 @@
   padding: 10rpx;
 }
 
-.all .bar image{
+.all .bar image {
   width: 50rpx;
   height: 50rpx;
 }
 
-.all .week{
+.all .week {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -70,27 +73,26 @@
   background-color: #acd;
 }
 
-.all .days{
+.all .days {
   margin: 20rpx;
   padding: 10rpx;
   border-radius: 10px;
   background-color: #acd;
-
 }
 
-.all .columns{
+.all .columns {
   display: flex;
   flex-direction: column;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
-.all .columns .rows{
+.all .columns .rows {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.all .columns .rows .cell{
+.all .columns .rows .cell {
   width: 84rpx;
   height: 88rpx;
   margin: 3rpx;
@@ -99,19 +101,24 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: #acd;
 }
 
-.count .daynumber{
+.all .columns .rows .cell::after{
+  border: none;
+}
+
+.count .daynumber {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.count .daynumber .day{
+.count .daynumber .day {
   margin-top: 50rpx;
 }
 
-.count{
+.count {
   margin: 20rpx;
   padding: 30rpx;
   display: flex;
@@ -123,7 +130,7 @@
   align-items: center;
 }
 
-.count .number{
+.count .number {
   color: red;
   font-size: 60rpx;
   background-color: #fff;
@@ -136,6 +143,6 @@
   margin: 20rpx;
 }
 
-.count text{
+.count text {
   margin: 10rpx;
 }
