--- a/pages/article/article.wxml
+++ b/pages/article/article.wxml
@@ -1,5 +1,2 @@
-<!--pages/article/article.wxml-->
-<button bindtap='vbt'>
-  <view wx:if="{{click != false}}">点击一下，查看日期</view>
-  <view wx:else>{{year}}年{{month}}月{{day}}日</view>
-</button>
+<import src="/towxml/entry.wxml"/>
+<template is="entry" data="{{...article}}"/>
