--- a/towxml/style/main.wxss
+++ b/towxml/style/main.wxss
@@ -88,8 +88,7 @@
     font-size: 32rpx;
     line-height: 1.8;
     word-wrap: break-word;
-    word-wrap: break-word;
-    word-break: break-all;
+    word-break: keep-all;
 }
 
 .h2w__main {
