--- a/pages/Setup/Setup.wxml
+++ b/pages/Setup/Setup.wxml
@@ -45,9 +45,9 @@
             <!-- 每个月份的有数字的单元格 -->
             <view class='cell' wx:else>
               <!-- 当前日期已签到 -->
-              <view wx:if="{{days[j+k].isSign == true}}" style='background-color:#83C75D' class='cell'>
-                <button bindtap="btn" id="{{days[j+k].date}}" >
-                  <text>{{days[j+k].date}}</text>
+              <view wx:if="{{days[j+k].isSign == true}}" class='cell'>
+                <button class='cell' bindtap="btn" id="{{days[j+k].date}}">
+                  <text class='txt'>{{days[j+k].date}}</text>
                 </button>
               </view>
               <!-- 当前日期未签到 -->
