--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -2,7 +2,7 @@
 .backpicture{  
  width:100%; 
  height: 100%;
- background: url(http://g.hiphotos.baidu.com/image/pic/item/960a304e251f95cacf9b2b2ec7177f3e6709523f.jpg)no-repeat;   
+ background: url(https://graph.baidu.com/resource/112b137d737236cc436cd01563269984.jpg)no-repeat;   
  background-size: cover;
  z-index: 0;  
  position: absolute;
